public/analytics/v0.15/_sources/reference/tmlt/analytics/keyset/index.rst.txt

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


*************
keyset
*************

.. py:module:: tmlt.analytics.keyset

.. autoapi-nested-parse::

   A KeySet specifies a list of values for one or more columns.

   For example, a KeySet could specify the values ``["a1", "a2"]`` for column A
   and the values ``[0, 1, 2, 3]`` for column B.

   Currently, KeySets are used as a simpler way to specify domains for groupby
   transformations.











Classes
=======


   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: KeySet


   Bases: :py:obj:`abc.ABC`

   A class containing a set of values for specific columns.

   .. warning::
       If a column has null values dropped or replaced, then Analytics
       will raise an error if you use a KeySet that contains a null value for
       that column.

   .. note::
       The :meth:`~.KeySet.from_dict` and :meth:`~.KeySet.from_dataframe` methods
       are the preferred way to construct KeySets. Directly constructing KeySets
       skips checks that guarantee the uniqueness of output rows, and ``__init__``
       methods are not guaranteed to work the same way between releases.



   .. list-table:: Methods

      * - :meth:`.from_dict`
        - Create a KeySet from a dictionary.
      * - :meth:`.from_dataframe`
        - Create a KeySet from a dataframe.
      * - :meth:`.dataframe`
        - Return the dataframe associated with this KeySet.
      * - :meth:`.__getitem__`
        - ``KeySet[col, col, ...]`` returns a KeySet with those columns only.
      * - :meth:`.__eq__`
        - Override equality.
      * - :meth:`.schema`
        - Returns the KeySet's schema.
      * - :meth:`.__mul__`
        - A product (``KeySet * KeySet``) returns the cross-product of both KeySets.
      * - :meth:`.columns`
        - Return the list of columns used by this KeySet.
      * - :meth:`.filter`
        - Filter this KeySet using some condition.
      * - :meth:`.size`
        - Get the size of this KeySet.
      * - :meth:`.cache`
        - Caches the KeySet's dataframe in memory.
      * - :meth:`.uncache`
        - Removes the KeySet's dataframe from memory and disk.





   .. py:method:: from_dict(domains)
      :classmethod:


      Create a KeySet from a dictionary.

      The ``domains`` dictionary should map column names to the desired values
      for those columns. The KeySet returned is the cross-product of those
      columns. Duplicate values in the column domains are allowed, but only
      one of the duplicates is kept.

      .. rubric:: Example

      >>> domains = {
      ...     "A": ["a1", "a2"],
      ...     "B": ["b1", "b2"],
      ... }
      >>> keyset = KeySet.from_dict(domains)
      >>> keyset.dataframe().sort("A", "B").toPandas()
          A   B
      0  a1  b1
      1  a1  b2
      2  a2  b1
      3  a2  b2


   .. py:method:: from_dataframe(dataframe)
      :classmethod:


      Create a KeySet from a dataframe.

      This DataFrame should contain every combination of values being selected
      in the KeySet. If there are duplicate rows in the dataframe, only one
      copy of each will be kept.

      When creating KeySets with this method, it is the responsibility of the
      caller to ensure that the given dataframe remains valid for the lifetime
      of the KeySet. If the dataframe becomes invalid, for example because its
      Spark session is closed, this method or any uses of the resulting
      dataframe may raise exceptions or have other unanticipated effects.


   .. py:method:: dataframe()
      :abstractmethod:


      Return the dataframe associated with this KeySet.

      This dataframe contains every combination of values being selected in
      the KeySet, and its rows are guaranteed to be unique as long as the
      KeySet was constructed safely.


   .. py:method:: __getitem__(columns)
      :abstractmethod:


      ``KeySet[col, col, ...]`` returns a KeySet with those columns only.

      The returned KeySet contains all unique combinations of values in the
      given columns that were present in the original KeySet.

      .. rubric:: Example

      >>> domains = {
      ...     "A": ["a1", "a2"],
      ...     "B": ["b1", "b2"],
      ...     "C": ["c1", "c2"],
      ...     "D": [0, 1, 2, 3]
      ... }
      >>> keyset = KeySet.from_dict(domains)
      >>> a_b_keyset = keyset["A", "B"]
      >>> a_b_keyset.dataframe().sort("A", "B").toPandas()
          A   B
      0  a1  b1
      1  a1  b2
      2  a2  b1
      3  a2  b2
      >>> a_b_keyset = keyset[["A", "B"]]
      >>> a_b_keyset.dataframe().sort("A", "B").toPandas()
          A   B
      0  a1  b1
      1  a1  b2
      2  a2  b1
      3  a2  b2
      >>> a_keyset = keyset["A"]
      >>> a_keyset.dataframe().sort("A").toPandas()
          A
      0  a1
      1  a2


   .. py:method:: __eq__(other)

      Override equality.

      Two KeySets are equal if their dataframes contain the same values for
      the same columns (in any order).

      .. rubric:: Example

      >>> keyset1 = KeySet.from_dict({"A": ["a1", "a2"]})
      >>> keyset2 = KeySet.from_dict({"A": ["a1", "a2"]})
      >>> keyset3 = KeySet.from_dict({"A": ["a2", "a1"]})
      >>> keyset1 == keyset2
      True
      >>> keyset1 == keyset3
      True
      >>> different_keyset = KeySet.from_dict({"B": ["a1", "a2"]})
      >>> keyset1 == different_keyset
      False


   .. py:method:: schema()
      :abstractmethod:


      Returns the KeySet's schema.

      .. rubric:: Example

      >>> domains = {
      ...     "A": ["a1", "a2"],
      ...     "B": [0, 1, 2, 3],
      ... }
      >>> keyset = KeySet.from_dict(domains)
      >>> schema = keyset.schema()
      >>> schema # doctest: +NORMALIZE_WHITESPACE
      {'A': ColumnDescriptor(column_type=ColumnType.VARCHAR, allow_null=True, allow_nan=False, allow_inf=False),
       'B': ColumnDescriptor(column_type=ColumnType.INTEGER, allow_null=True, allow_nan=False, allow_inf=False)}


   .. py:method:: __mul__(other)

      A product (``KeySet * KeySet``) returns the cross-product of both KeySets.

      .. rubric:: Example

      >>> keyset1 = KeySet.from_dict({"A": ["a1", "a2"]})
      >>> keyset2 = KeySet.from_dict({"B": ["b1", "b2"]})
      >>> product = keyset1 * keyset2
      >>> product.dataframe().sort("A", "B").toPandas()
          A   B
      0  a1  b1
      1  a1  b2
      2  a2  b1
      3  a2  b2


   .. py:method:: columns()
      :abstractmethod:


      Return the list of columns used by this KeySet.


   .. py:method:: filter(condition)
      :abstractmethod:


      Filter this KeySet using some condition.

      This method accepts the same syntax as
      :meth:`~pyspark.sql.DataFrame.filter`: valid conditions are those that
      can be used in a `WHERE clause
      <https://spark.apache.org/docs/latest/sql-ref-syntax-qry-select-where.html>`__
      in Spark SQL. Examples of valid conditions include:

      * ``age < 42``
      * ``age BETWEEN 17 AND 42``
      * ``age < 42 OR (age < 60 AND gender IS NULL)``
      * ``LENGTH(name) > 17``
      * ``favorite_color IN ('blue', 'red')``

      .. rubric:: Example

      >>> domains = {
      ...     "A": ["a1", "a2"],
      ...     "B": [0, 1, 2, 3],
      ... }
      >>> keyset = KeySet.from_dict(domains)
      >>> filtered_keyset = keyset.filter("B < 2")
      >>> filtered_keyset.dataframe().sort("A", "B").toPandas()
          A  B
      0  a1  0
      1  a1  1
      2  a2  0
      3  a2  1
      >>> filtered_keyset = keyset.filter(keyset.dataframe().A != "a1")
      >>> filtered_keyset.dataframe().sort("A", "B").toPandas()
          A  B
      0  a2  0
      1  a2  1
      2  a2  2
      3  a2  3


   .. py:method:: size()
      :abstractmethod:


      Get the size of this KeySet.


   .. py:method:: cache()

      Caches the KeySet's dataframe in memory.


   .. py:method:: uncache()

      Removes the KeySet's dataframe from memory and disk.







